--- a/SDL_ThreadID.mediawiki
+++ b/SDL_ThreadID.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 {|
 |<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
 |}
@@ -32,4 +32,4 @@ threadID = SDL_ThreadID();
 : [[SDL_GetThreadID]]
 
 ----
-[[CategoryAPI]], CategoryThread
+[[CategoryAPI]], [[CategoryThread]]
