--- a/SDL_CreateMutex.mediawiki
+++ b/SDL_CreateMutex.mediawiki
@@ -1,22 +1,23 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 {|
 |<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
 |}
 
 
 = SDL_CreateMutex =
-Use this function to create a new mutex. The mutex is returned as an initialized and unlocked mutex.
+Use this function to create a new mutex. ,,The mutex is returned as an initialized and unlocked mutex.,,
 
 
 == Syntax ==
 ```c++
 SDL_mutex* SDL_CreateMutex(void)
 ```
-== Return Value ==
-Returns the initialized and unlocked mutex. This is a pointer to SDL's internal mutex data structure.
 
-On error, NULL is returned. To retrieve error description, call SDL_GetError();
+== Return Value ==
+Returns the initialized and unlocked mutex or NULL on failure; call [[SDL_GetError]]() for more information.  
+
+,,This is a pointer to SDL's internal mutex data structure.,,
 
 == Code Examples ==
 ```c++
@@ -51,4 +52,4 @@ SDL_DestroyMutex(mut);
 : [[SDL_mutexV]] *
 
 ----
-[[CategoryAPI]], CategoryMutex
+[[CategoryAPI]], [[CategoryMutex]]
