--- a/SDL_AllocFormat.mediawiki
+++ b/SDL_AllocFormat.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_AllocFormat =
-Use this function to create an [[SDL_PixelFormat]] structure from an ,,a pixel format enum,, [[SDL_PixelFormatEnum]].
+Use this function to create an [[SDL_PixelFormat]] structure corresponding to a pixel format.
 
 
 == Syntax ==
@@ -14,11 +13,11 @@ SDL_PixelFormat* SDL_AllocFormat(Uint32 pixel_format)
 == Function Parameters ==
 {|
 |'''pixel_format'''
-|one of the [[SDL_PixelFormatEnum]] values
+|one of the [[SDL_PixelFormatEnum]] values; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
-Returns the new [[SDL_PixelFormat]] structure or NULL on error.
+Returns the new [[SDL_PixelFormat]] structure or NULL on error; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
@@ -26,7 +25,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+'''pixel_format''' may be one of the following:
+<<Include(SDL_PixelFormatEnum, , , from="Start Include here.", to="##End Include here.")>>
 
 == Related Functions ==
 :[[SDL_FreeFormat]]
