--- a/SDL_SetPixelFormatPalette.mediawiki
+++ b/SDL_SetPixelFormatPalette.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_SetPixelFormatPalette =
-Use this function to set the palette for ,,a pixel format structure,, an [[SDL_PixelFormat]].
+Use this function to set the palette for a pixel format structure.
 
 
 == Syntax ==
@@ -15,10 +14,10 @@ int SDL_SetPixelFormatPalette(SDL_PixelFormat* format,
 == Function Parameters ==
 {|
 |'''format'''
-|the [[SDL_PixelFormat]] structure to set / fill in???
+|the [[SDL_PixelFormat]] structure that will use the palette
 |-
 |'''palette'''
-|the [[SDL_Palette]] structure to apply???
+|the [[SDL_Palette]] structure that will be used
 |}
 
 == Return Value ==
@@ -33,7 +32,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_OtherFunction]]
+:[[SDL_AllocPalette]]
 
 ----
 [[CategoryAPI]], [[CategoryPixels]]
