--- a/SDL_SetPixelFormatPalette.mediawiki
+++ b/SDL_SetPixelFormatPalette.mediawiki
@@ -33,6 +33,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_AllocPalette]]
+:[[SDL_FreePalette]]
 
 ----
 [[CategoryAPI]], [[CategoryPixels]]
