--- a/SDL_PixelFormat.mediawiki
+++ b/SDL_PixelFormat.mediawiki
@@ -10,7 +10,7 @@ A structure that contains pixel format information.
 {|
 |Uint32
 |'''format'''
-|one of the [[SDL_PixelForamtEnum]] values
+|one of the [[SDL_PixelFormatEnum]] values
 |-
 |[[SDL_Palette]]*
 |'''palette'''
