--- a/SDL_HINT_RENDER_SCALE_QUALITY.mediawiki
+++ b/SDL_HINT_RENDER_SCALE_QUALITY.mediawiki
@@ -26,7 +26,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+This hint is checked when a texture is created and it affects scaling when copying that texture. 
 
 ----
 [[CategoryDefine]], [[CategoryHints]]
