--- a/SDL1.2Tutorials.mediawiki
+++ b/SDL1.2Tutorials.mediawiki
@@ -4,6 +4,10 @@
 There are a number of SDL tutorials available from different sources.
 
 
+== Setup ==
+* [http://blog.pantokrator.net/2006/08/08/setting-up-msysmingw-build-system-for-compiling-sdlopengl-applications/ SDL and MYSYS/MinGW]
+: A tutorial detailing how to set up the MSYS/MinGW build system for compiling SDL/OpenGL applications
+
 == Multi-Subject ==
 * [http://www.sdltutorials.com/ SDLTutorials.com]
 : Wow! A whole website about SDL tutorials, including SDL basics, events, animation, entities, maps and other topics
