--- a/FAQWindows.mediawiki
+++ b/FAQWindows.mediawiki
@@ -63,6 +63,10 @@ There are also step by step instructions at: http://docs.deninet.com/sdl_on_dev_
 Choose "gui application" instead of "console application" when compiling for Vista.
 
 
+=== MinGW/MYSYS ===
+==== How do I use SDL with MinGW/MYSYS? ====
+See the [http://wiki.libsdl.org/moin.cgi/SDL1.2Tutorials#Setup SDL and MYSYS/MinGW] Tutorial
+
 === Miscellaneous ===
 ==== I get "Undefined reference to 'SDL_main'" ... ====
 Make sure that you are declaring main() as:
