--- a/SDL_SetWindowBrightness.mediawiki
+++ b/SDL_SetWindowBrightness.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_SetWindowBrightness =
 Use this function to set the brightness (gamma correction) for a window.
@@ -15,10 +14,10 @@ int SDL_SetWindowBrightness(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|^the window to change^
+|the window to update
 |-
 |'''brightness'''
-|the brightness (gamma) value to set, 0.0 to 1.0
+|the brightness (gamma) value to set where 0.0 is black and 1.0 is no change
 |}
 
 == Return Value ==
@@ -31,8 +30,6 @@ You can add your code example here
 
 == Remarks ==
 ''You can add useful comments here''
-
-,,This function will fail if setting the brightness is not supported.,,
 
 == Related Functions ==
 :[[SDL_GetWindowBrightness]]
