--- a/SDL_GetWindowGammaRamp.mediawiki
+++ b/SDL_GetWindowGammaRamp.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_GetWindowGammaRamp =
 Use this function to get the gamma ramp for a window.
@@ -20,13 +19,13 @@ int SDL_GetWindowGammaRamp(SDL_Window* window,
 |the window to query
 |-
 |'''red'''
-|a pointer to ,,a,, ^the^ 256 element array of 16-bit quantities ,,to hold,, ^holding^ the translation table for the red channel, or NULL
+|a 256 element array of 16-bit quantities filled in with the translation table for the red channel, or NULL
 |-
 |'''green'''
-|a pointer to ,,a,, ^the^ 256 element array of 16-bit quantities ,,to hold,, ^holding^ the translation table for the green channel, or NULL
+|a 256 element array of 16-bit quantities filled in with the translation table for the green channel, or NULL
 |-
 |'''blue'''
-|a pointer to ,,a,, ^the^ 256 element array of 16-bit quantities ,,to hold,, ^holding^ the translation table for the blue channel, or NULL
+|a 256 element array of 16-bit quantities filled in with the translation table for the blue channel, or NULL
 |}
 
 == Return Value ==
